# docs/swagger.yaml
@@ -27,10 +27,9 @@ tags:
   - name: Cart
   - name: Quiz
   - name: Draft Order
-  - name:  Orders
+  - name: Orders
   - name: Shipping
-  - name : Blog
-
+  - name: Blog
 
 paths:
   /auth/register:
@@ -439,8 +438,8 @@ paths:
 
   /cart/update-quantity:
     put:
-      tags: 
-      - Cart
+      tags:
+        - Cart
       summary: Update the quantity of a product in the cart
       description: Update the quantity of a product in the customer's cart
       parameters:
@@ -472,7 +471,6 @@ paths:
         404:
           description: Product not found
 
-        
   /cart/remove-item:
     put:
       tags:
@@ -602,19 +600,19 @@ paths:
       summary: Get Product by category
       description: Retreve products by them category
       parameters:
-        - in : path 
-          name : category
+        - in: path
+          name: category
           required: true
           type: string
       responses:
-         200:
+        200:
           description: Successful operation
           schema:
             $ref: "#/definitions/Product"
-         404:
+        404:
           description: Product not found
-         500:
-          description: Internal server error 
+        500:
+          description: Internal server error
   /products/{id}:
     get:
       tags:
@@ -859,7 +857,6 @@ paths:
             properties:
               message:
                 type: string
-  
 
   /users/{id}:
     get:
@@ -1277,7 +1274,8 @@ paths:
             properties:
               order_status:
                 type: string
-                enum: ["Pending Confirmation", "Confirmed", "Success", "Cancelled"]
+                enum:
+                  ["Pending Confirmation", "Confirmed", "Success", "Cancelled"]
       responses:
         200:
           description: Order updated successfully
@@ -1291,18 +1289,18 @@ paths:
       summary: delete order
       description: delete order by id
       parameters:
-        - name : id
-          in : path
+        - name: id
+          in: path
           required: true
           type: string
           description: Order Id
       responses:
         200:
           description: Order deleted successfully
-        404: 
+        404:
           description: Order not found
         500:
-          description: server error    
+          description: server error
   /orders/customer/{customerId}:
     get:
       tags:
@@ -1338,7 +1336,7 @@ paths:
           schema:
             type: array
             items:
-              $ref: '#/definitions/ShipFee'
+              $ref: "#/definitions/ShipFee"
         500:
           description: Server error
     post:
@@ -1353,12 +1351,12 @@ paths:
           name: shipFee
           description: Ship fee information
           schema:
-            $ref: '#/definitions/ShipFee'
+            $ref: "#/definitions/ShipFee"
       responses:
         201:
           description: Ship fee created successfully
           schema:
-            $ref: '#/definitions/ShipFee'
+            $ref: "#/definitions/ShipFee"
         400:
           description: Invalid request
         500:
@@ -1370,17 +1368,17 @@ paths:
       summary: Get ship fee by location
       description: Returns a ship fee based on location
       parameters:
-      - in: query
-        name: location
-        required: true
-        type: string
-        description: Location to search
+        - in: query
+          name: location
+          required: true
+          type: string
+          description: Location to search
 
       responses:
         200:
           description: Success
           schema:
-            $ref: '#/definitions/ShipFee'
+            $ref: "#/definitions/ShipFee"
         404:
           description: Ship fee not found
         500:
@@ -1401,7 +1399,7 @@ paths:
           name: shipFee
           description: Ship fee data to update
           schema:
-            $ref: '#/definitions/ShipFee'
+            $ref: "#/definitions/ShipFee"
       responses:
         200:
           description: Ship fee updated successfully
@@ -1532,12 +1530,12 @@ paths:
           name: blog
           description: Blog information
           schema:
-            $ref: '#/definitions/Blog'
+            $ref: "#/definitions/Blog"
       responses:
         201:
           description: Blog created successfully
           schema:
-            $ref: '#/definitions/Blog'
+            $ref: "#/definitions/Blog"
         400:
           description: Invalid request
         500:
@@ -1554,7 +1552,7 @@ paths:
           schema:
             type: array
             items:
-              $ref: '#/definitions/Blog'
+              $ref: "#/definitions/Blog"
         500:
           description: Server error
 
@@ -1574,7 +1572,7 @@ paths:
         200:
           description: Success
           schema:
-            $ref: '#/definitions/Blog'
+            $ref: "#/definitions/Blog"
         404:
           description: Blog not found
         500:
@@ -1595,7 +1593,7 @@ paths:
           name: blog
           description: Blog data to update
           schema:
-            $ref: '#/definitions/Blog'
+            $ref: "#/definitions/Blog"
       responses:
         200:
           description: Blog updated successfully
@@ -1670,24 +1668,24 @@ paths:
       consumes:
         - application/json
       parameters:
-      - in: path
-        name: Id
-        required: true
-        type: string
-        description: ID of the product to update rating
-      - in: body
-        name: body
-        description: New rating and comment values
-        required: true
-        schema:
-          type: object
-          properties:
-            rating:
-              type: number
-              description: New rating value
-            comment:
-              type: string
-              description: New comment value
+        - in: path
+          name: Id
+          required: true
+          type: string
+          description: ID of the product to update rating
+        - in: body
+          name: body
+          description: New rating and comment values
+          required: true
+          schema:
+            type: object
+            properties:
+              rating:
+                type: number
+                description: New rating value
+              comment:
+                type: string
+                description: New comment value
       responses:
         200:
           description: Rating updated successfully
@@ -1705,7 +1703,7 @@ paths:
                 type: string
   /reviews/{id}:
     get:
-      tags: 
+      tags:
         - Reviews
       summary: Get a review by ID
       description: Retrieve a specific review by its ID
@@ -1771,7 +1769,7 @@ paths:
           schema:
             type: array
             items:
-              $ref: '#/definitions/Routine'
+              $ref: "#/definitions/Routine"
         404:
           description: Routines not found
         500:
@@ -1789,12 +1787,12 @@ paths:
           name: routine
           description: Routine information
           schema:
-            $ref: '#/definitions/Routine'
+            $ref: "#/definitions/Routine"
       responses:
         201:
           description: Routine created successfully
           schema:
-            $ref: '#/definitions/Routine'
+            $ref: "#/definitions/Routine"
         400:
           description: Invalid request
         500:
@@ -1815,7 +1813,7 @@ paths:
           name: routine
           description: Routine data to update
           schema:
-            $ref: '#/definitions/Routine'
+            $ref: "#/definitions/Routine"
       responses:
         200:
           description: Routine updated successfully
@@ -2011,8 +2009,7 @@ paths:
             properties:
               message:
                 type: string
-  
-  
+
 definitions:
   Order:
     type: object
@@ -2060,7 +2057,7 @@ definitions:
     properties:
       location:
         type: string
-        example: 'New York'
+        example: "New York"
       price:
         type: number
         example: 5.99
@@ -2081,7 +2078,7 @@ definitions:
         example: 0
       skinType:
         type: string
-        example: "64e9f8c8b4d6c5a2f4d8e7f1" 
+        example: "64e9f8c8b4d6c5a2f4d8e7f1"
       stock:
         type: integer
         example: 100
@@ -2105,8 +2102,8 @@ definitions:
         type: number
         example: 19.99
 
-  CustomerId: 
-    type: string 
+  CustomerId:
+    type: string
   User:
     type: object
     properties:
@@ -2391,5 +2388,3 @@ definitions:
         type: string
       point:
         type: number
-   
-     
