# src/controllers/orderController.js
@@ -3,8 +3,7 @@ const OrderService = require("../services/orderService");
 const OrderController = {
   async createOrder(req, res) {
     try {
-      const { customerId, payment_method, address, phone, totalPay } =
-        req.body;
+      const { customerId, payment_method, address, phone, totalPay } = req.body;
       if (!customerId || !payment_method || !address || !phone) {
         return res.status(400).json({ message: "Missing required fields" });
       }
